# slambook2

./: README.md
ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp
ch11/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
ch12/dense_RGBD/: pointcloud_mapping.cpp
ch12/dense_mono/: .gitignore  CMakeLists.txt  dense_mapping.cpp
ch13/: CMakeLists.txt
ch3/Practice1/: CMakeLists.txt
ch3/Practice1_Eigen_basic/: eigenMatrix.cpp
ch3/Practice2_Eigen_geometry/: CMakeLists.txt  usegeometry.cpp
ch3/Practice3_transform/: CMakeLists.txt  TwoRobotTransform.cpp
ch3/Practice4_visualization/: CMakeLists.txt  plotTrajectory.cpp
ch4/trajError/: CMakeLists.txt  trajectoryError.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/imageBasics/: imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: joinMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  pose_est_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangluation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch9/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_g2o.cpp  common.cpp  common.h
